[Files] Fisiere ajutatoare
+Aratam ca populam si din API date.
+Adaugare in xml un basepath pentru a se incarca fisierele dinamic (cu o clasa ajutatoare)

--- a/ConDr/src/main/webapp/WEB-INF/web.xml
+++ b/ConDr/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,20 @@
   <welcome-file>login.html</welcome-file>
 </welcome-file-list>
 
+  <servlet>
+    <servlet-name>fileServlet</servlet-name>
+    <servlet-class>com.incercare.servlets.FileServlet</servlet-class>
+    <init-param>
+      <param-name>basePath</param-name>
+      <param-value>D:/img</param-value>
+    </init-param>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>fileServlet</servlet-name>
+    <url-pattern>/img/*</url-pattern>
+  </servlet-mapping>
+
   <filter>
     <filter-name>RequestLoggingFilter</filter-name>
     <filter-class>com.servlets.filters.RequestLoggingFilter</filter-class>
